clusters/test-deployment/apps/kubevious/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevious-ui
  namespace: kubevious
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kubevious.kt.wsh.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubevious-ui-clusterip
                port:
                  number: 80
